--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,4 @@
-# Two-trick pony for OSX and other case insensitive file systems:
+#. Two-trick pony for OSX and other case insensitive file systems:
 # Ignore ./python binary on Unix but still look into ./Python/ directory.
 /python
 !/Python/
@@ -86,7 +86,7 @@ libpython*.dylib
 libpython*.dll
 platform
 pybuilddir.txt
-pyconfig.h
+/pyconfig.h
 python-config
 python-config.py
 python.bat
@@ -106,3 +106,7 @@ Tools/ssl/amd64
 Tools/ssl/win32
 .vs/
 .vscode/
+Python.framework
+iOS/_freeze_importlib
+tvOS/_freeze_importlib
+watchOS/_freeze_importlib
