--- a/.gitignore
+++ b/.gitignore
@@ -97,4 +97,7 @@ Tools/ssl/amd64
 Tools/ssl/win32
 .vs/
 .vscode/
+Python.framework
 iOS/_freeze_importlib
+tvOS/_freeze_importlib
+watchOS/_freeze_importlib
